<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <TextView 
        style="@style/TextView"
        android:id="@+id/week_add_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/week_add_editText"/>

    <EditText
        android:id="@+id/week_add_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/week_hint"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@id/week_add_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/day_add_textView"/>

    <TextView 
        style="@style/TextView"
        android:id="@+id/day_add_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        app:layout_constraintTop_toBottomOf="@id/week_add_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/day_add_editText"/>

    <EditText
        android:id="@+id/day_add_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day_hint"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@id/day_add_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sub_add_textView"/>

    <TextView 
        style="@style/TextView"
        android:id="@+id/sub_add_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        app:layout_constraintTop_toBottomOf="@id/day_add_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sub_add_editText"/>

    <EditText
        android:id="@+id/sub_add_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint"
        app:layout_constraintTop_toBottomOf="@id/sub_add_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/add_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_add_button"
        android:backgroundTint="@color/colorAccent"
        android:padding="16dp"
        android:textSize="24dp"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>